--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 }
-
+#firstPage{
+    position: absolute;
+}
 body,html{
     position: relative;
     width: 100%;
