--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,9 @@ body,html{
             transform: scale(0);
     transition: all ease-in-out 0.3s;
 }
+.final-btn{
+    display: inline-block;
+}
 #love .love-pop-btn{
     text-align: right;
     margin-top: 50px;
@@ -77,6 +80,22 @@ body,html{
     font-size: 14px;
     text-align: center;
     cursor: pointer;
+}
+.note-box{
+    width: 100%;
+    height: 100%;
+}
+.note{
+    width: 350px;
+    height: 600px;
+    background: #fff;
+    font-size: 14px;
+    color: #666;
+    line-height: 2;
+    border-radius: 4px;
+    padding: 20px;
+    overflow:auto;
+
 }
 #love .u-box{
     margin: 10px 0;
@@ -110,7 +129,7 @@ body,html{
 }
 .page{
     width: 100%;
-    heigh: 100%;
+    height: 100%;
 }
 .final{
     height: 100%;
